--- a/INSTALL
+++ b/INSTALL
@@ -6,6 +6,8 @@ system. Currently Microhex requires:
     - gcc or MinGW C++ compiler with support for C++11 standard (g++ version 4.6 or greater)
       (http://sourceforge.net/projects/mingw)
     - SIP bindings generator (http://www.riverbankcomputing.co.uk/software/sip/download)
+    - pycparser module (optional, required for parsing data type definitions from C-language headers)
+      For Ubuntu, you should install python3-pycparser package or use pip.
 
 Next step is to set proper values in config.pri file.
 Note for Linux users: beware of installing application into /usr/bin (or another
@@ -27,4 +29,3 @@ After all, you can start Microhex by executing command in installation directory
     python3 ./microhex.py
 or by double-clicking on microhex.py icon if you are using Windows and .py files are associated with Python 3.x
 interpreter.
-
